--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.8.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "embla-carousel-react": "^8.6.0",
     "react": "^19.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -20,14 +19,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:ui": "karma start --single-run"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+ "eslintConfig": {
+  "env": {
+    "jasmine": true
   },
+  "extends": [
+    "react-app",
+    "react-app/jest"
+  ]
+},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -39,5 +42,28 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/jasmine-dom": "^1.3.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "babel-loader": "^10.0.0",
+    "esbuild": "^0.25.10",
+    "esbuild-plugin-istanbul": "^0.3.0",
+    "jasmine-core": "^5.11.0",
+    "karma": "^6.4.4",
+    "karma-babel-preprocessor": "^8.0.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-esbuild": "^2.3.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "karma-spec-reporter": "^0.0.36",
+    "karma-webpack": "^5.0.1",
+    "null-loader": "^4.0.1",
+    "react-test-renderer": "^19.2.0"
   }
 }
