--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
